--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -79,9 +79,110 @@
 
 	<dt>Impanel</dt>
 	<dd>to choose people to serve on a jury</dd>
-</dl>
 
 
+	<img src="assets/images/logo.jpg" alt="Puppies">
+  
+
+<table>
+	<tr>
+		<th></th>
+		<th scope="col">Saturday</th>
+		<th scope="col">Sunday</th>
+
+	</tr>
+
+<tr>
+	<th scope="row">Ticket Sold </th>
+	<td>130</td>
+	<td>120</td>
+
+
+<tr>
+	<th scope="row">Total Sales </th>
+	<td>130</td>
+	<td>120</td>
+
+
+</tr>	
+
+
+</table>
+
+<table>
+	<tr>
+		<th></th>
+		<td>9am</td>
+		<td>10am</td>	
+		<td>11am</td>		
+
+	</tr>
+
+	<tr>
+		<th>Monday</th>
+		<th colspan="2">Geography</th>
+		<td>Math</td>
+		<td>Art</td>
+
+	</tr>
+
+	<tr>
+	<th>Tuesday</th>
+	<td colspan="3">Gym</td>
+	<td>Home</td>
+
+
+	</tr>	
+
+	<tr>
+		<th></th>
+		<th>TV5</th>
+		<th>GMA</th>
+		<th>ABS-CBN</th>
+	</tr>
+
+	<tr>
+		<th>6pm-7pm</th>
+		<td rowspan="2">Cartoon </td>
+		<td>Comedy</td>
+		<td>News</td>
+
+	</tr>
+
+
+	<tr>
+		<th>7pm-8pm</th>
+		<td>Sports</td>
+		<td>Current Affairs</td>
+
+
+	</tr>
+
+	<tr>
+		<th>8pm-9pm</th>
+		<td colspan="2">Teleserye</td>
+		<td>Educational</td>
+
+	</tr>
+
+
+	<tr>
+		<th>9pm-10pm</th>
+		<td rowspan="2" colspan="2">Comedy</td>
+		<td>News</td>
+
+		
+
+	</tr>	
+
+	<tr>
+		<th>10pm-11pm</th>
+		<td>Sport</td>
+
+	</tr>
+
+
+</table>
 
 
 </body>
